--- a/LearningSelenium-20-10-2020/.classpath
+++ b/LearningSelenium-20-10-2020/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/home/saurabhd2106gma/Desktop/libs/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="/home/saurabhd2106gma/Desktop/libs/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
